# tsu-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  multiplayer_smoke_test.md
.claude/: settings.local.json
.github/workflows/: release-linux.yml
assets/scenes/: default.tscene  default_backup.tscene  lightbake_demo.tscene  multiplayer_test.tscene
docs/: index.md  multiplayer_smoke_test.md
docs/lua/: api.md  examples.md  overview.md
engine/components/: cameraComponent.h  gameCameraComponent.h  meshRendererComponent.h  rigidBodyComponent.h  transformComponent.h
engine/core/: application.cpp  application.h  gameApp.cpp  gameApp.h  window.cpp  window.h
engine/editor/: Editorcamera.cpp  Editorcamera.h  editorCamera.cpp  editorCamera.h  editorGizmo.cpp  editorGizmo.h
engine/input/: inputManager.cpp  inputManager.h  inputmanager.cpp  inputmanager.h
engine/lua/: luaSystem.cpp  luaSystem.h
engine/network/: multiplayerSystem.cpp  multiplayerSystem.h
engine/physics/: physicsSystem.cpp  physicsSystem.h
engine/procedural/: mazeGenerator.cpp  mazeGenerator.h
engine/renderer/: lightBaker.cpp  lightBaker.h  lightmapManager.cpp  lightmapManager.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  textureLoader.cpp  textureLoader.h
engine/scene/: entity.cpp  entity.h  scene.cpp  scene.h
engine/serialization/: prefabSerializer.cpp  prefabSerializer.h  sceneSerializer.cpp  sceneSerializer.h
engine/ui/: hierarchyPanel.cpp  hierarchyPanel.h  inspectorPanel.cpp  inspectorPanel.h  uiManager.cpp  uiManager.h
materiais/_temp/Bricks097_2K-PNG/: Bricks097_2K-PNG.blend  Bricks097_2K-PNG.mtlx  Bricks097_2K-PNG.tres  Bricks097_2K-PNG.usdc
materiais/_temp/Metal062C_2K-PNG/: Metal062C_2K-PNG.blend  Metal062C_2K-PNG.mtlx  Metal062C_2K-PNG.tres
materiais/_temp/WoodFloor051_2K-PNG/: WoodFloor051_2K-PNG.blend  WoodFloor051_2K-PNG.mtlx
materiais/_temp/metal/: Metal062C_2K-PNG.usdc
materiais/_temp/wood/: WoodFloor051_2K-PNG.tres  WoodFloor051_2K-PNG.usdc
release test/: game.mode
release test/assets/scenes/: default.tscene
release test/assets/scripts/: example_rotate.lua
sandbox/: game_main.cpp  main.cpp
shaders/: fragment.glsl  vertex.glsl
